--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://matthieulepaix.github.io/react-template/",
-  "name": "react-template",
+  "homepage": "https://matthieulepaix.github.io/emmanuellelepaix.fr",
+  "name": "emmanuellelepaix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,23 +8,24 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
+    "@types/node": "^12.19.1",
     "@types/pretty-format": "^24.3.0",
-    "@types/react": "^16.9.41",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.0",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "gh-pages": "^3.1.0",
-    "i18next": "^19.5.1",
+    "i18next": "^19.8.2",
     "node-sass-chokidar": "^1.5.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-i18next": "^11.7.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "sass": "^1.26.9",
-    "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
+    "react-scripts": "4.0.0",
+    "sass": "^1.27.0",
+    "styled-components": "^5.2.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.11.1"
   }
 }
